fix issue with js (add to webpack), fix issue with overflow

--- a/sass/_aboutme.scss
+++ b/sass/_aboutme.scss
@@ -7,6 +7,7 @@
 			flex-direction: column;
 			margin-right: 0%;
 			align-items: center;
+			width: 100%;
 		}
 	}
 
